# WARScribe-CLI

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  ROADMAP.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: auto-merge.yml
.specify/memory/: constitution.md
contributing/: index.html
docs/: SETUP.md  commands.md  contributing.md  getting-started.md  index.md
docs/adr/: 001-python-language.md
getting-started/: index.html
site/: 404.html  index.html  sitemap.xml
site/SETUP/: index.html
site/adr/000-template/: index.html
site/adr/001-python-language/: index.html
site/adr/002-precommit-required/: index.html
site/commands/: index.html
site/contributing/: index.html
site/getting-started/: index.html
site/search/: search_index.json
