[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "warscribe-cli"
version = "0.1.0"
description = "Command-line tools for WARScribe notation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["typer[all]>=0.12", "rich>=13.0"]

[project.scripts]
warscribe = "warscribe_cli.main:app"

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4", "pre-commit>=3.7"]

[tool.hatch.build.targets.wheel]
packages = ["src/warscribe_cli"]
